# TeleRSS

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.ini  docker-compose.yml  follower.example.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
model/: follower_model.py  import_script.py  model.py
notice/: message_sender.py
scheduler/: scheduler.py
strategy/: context.py  rss_parse.py  strategy_factory.py
tg_func/: commands_handller.py  message_sender.py
utils/: config_manager.py  date_handler.py  logger.py  rss_client.py  telegram_client.py
