[project]
name = "TeleRSS"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.6",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
